ui fixed and modified component for better readability

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,14 +1,20 @@
-.menuCon {
-    text-align: right;
-    padding-right: 12px;
-    color: white;
-}
-.logo {
-    padding-left: 12px;
-    color: white;
-}
-.menu-bar {
+.navbar {
     height: 60px;
     font-size: 18px;
     background-color: #333;
+
+    &-items {
+        height: 100%;
+    }
+    &-item {
+        align-self: center;
+        margin-left: 10px;
+        a {
+            color: white;
+            font-weight: bold;
+        }
+    }
+    .logout {
+        text-align: end;
+    }
 }
