--- a/src/components/SavedCountryList/index.scss
+++ b/src/components/SavedCountryList/index.scss
@@ -1,3 +1,9 @@
-.calculate-cost {
-    
+.main-container {
+    .calculate-cost {
+        display: inline;
+        margin-bottom: 40px;
+    }
+    .country-rate-table {
+        margin-top: 40px;
+    }
 }
